<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_activity_DrawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/tool_bar"
            layout="@layout/tool_bar"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" />

        <com.droidoxy.easymoneyrewards.utils.SlidingTabLayout
            android:id="@+id/tabs"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="@dimen/space50"
            android:background="@color/colorPrimary"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp"
                android:id="@+id/layout_main"
                android:visibility="gone">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:padding="10dp"
                        android:id="@+id/daily_checkin"
                        android:orientation="vertical"
                        android:background="@drawable/nav_drawer_row_item_background"
                        android:clickable="true">
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="6"
                            android:id="@+id/daily_image"
                            android:layout_marginBottom="10dp"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="3"
                            android:gravity="center"
                            android:id="@+id/daily_title"
                            style="@style/TitleText"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="2"
                            android:gravity="center"
                            android:id="@+id/daily_sub"
                            style="@style/SubText"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:padding="10dp"
                        android:id="@+id/web_panel_video"
                        android:orientation="vertical"
                        android:background="@drawable/nav_drawer_row_item_background"
                        android:clickable="true">
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="6"
                            android:id="@+id/video_image"
                            android:layout_marginBottom="10dp"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="3"
                            android:gravity="center"
                            android:id="@+id/video_title"
                            style="@style/TitleText"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="2"
                            android:gravity="center"
                            android:id="@+id/video_sub"
                            style="@style/SubText"/>
                    </LinearLayout>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/grey_600"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:padding="10dp"
                        android:id="@+id/news"
                        android:orientation="vertical"
                        android:background="@drawable/nav_drawer_row_item_background"
                        android:clickable="true">
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="6"
                            android:id="@+id/news_image"
                            android:layout_marginBottom="10dp"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="3"
                            android:gravity="center"
                            android:id="@+id/news_title"
                            style="@style/TitleText"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="2"
                            android:gravity="center"
                            android:id="@+id/news_sub"
                            style="@style/SubText"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:padding="10dp"
                        android:id="@+id/upgrade"
                        android:orientation="vertical"
                        android:background="@drawable/nav_drawer_row_item_background"
                        android:clickable="true">
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="6"
                            android:id="@+id/upgrade_image"
                            android:src="@drawable/upgrade_premium"
                            android:layout_marginBottom="10dp"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="3"
                            android:gravity="center"
                            android:id="@+id/upgrade_title"
                            android:text="@string/upgrade_title"
                            style="@style/TitleText"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="2"
                            android:gravity="center"
                            android:id="@+id/upgrade_sub"
                            android:text="@string/upgrade_sub"
                            style="@style/SubText"/>
                    </LinearLayout>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/grey_600"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:id="@+id/layout_retry">

                <ImageView
                    android:id="@+id/emptyImage"
                    android:layout_marginTop="@dimen/space120"
                    android:layout_width="@dimen/space80"
                    android:layout_height="@dimen/space80"
                    android:src="@drawable/ic_no_data"
                    android:contentDescription="@string/app_name"
                    android:visibility="gone"/>

                <TextView
                    android:id="@+id/emptyText"
                    android:text="@string/unabe_to_load_offerwalls"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/space15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"/>

                <Button
                    android:id="@+id/retryButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space20"
                    android:text="@string/retry"
                    android:textColor="@color/white"
                    android:background="@drawable/button_primary"
                    android:visibility="gone"/>

                <ProgressBar
                    android:id="@+id/progressBarOfferwalls"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space120"
                    android:layout_marginBottom="@dimen/space40"
                    android:layout_gravity="center"
                    android:indeterminateTint="@color/colorPrimary" />
            </LinearLayout>
        </RelativeLayout>
        <!---->
        <!--<android.support.v4.view.ViewPager-->
            <!--android:id="@+id/pager"-->
            <!--android:layout_height="0dp"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_weight="1" />-->

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:background="@color/white"
            android:padding="@dimen/space1"
            android:layout_gravity="bottom"
            android:layout_height="wrap_content">

            <com.google.android.gms.ads.AdView
                android:id="@+id/adView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                ads:adSize="BANNER"
                ads:adUnitId="@string/banner_ad_unit_id" />
        </LinearLayout>

    </LinearLayout>

    <!-- The navigation drawer -->
    <include layout="@layout/navigation_drawer"/>

</android.support.v4.widget.DrawerLayout>